<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Widget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Widget.AppWidgetContainer">

    <Button
        android:id="@+id/openWebButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:layout_centerHorizontal="true"
 />

    <ImageView
        android:id="@+id/widgetImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/openWebButton"
 />

    <Button
        android:id="@+id/prevImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/widgetImage"
/>

    <Button
        android:id="@+id/nextImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/widgetImage"
/>

    <TextView
        android:id="@+id/musicTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/prevImageButton"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/musicTitle"/>

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/musicTitle"/>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/musicTitle"/>

    <Button
        android:id="@+id/prevMusicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/playButton"/>

    <Button
        android:id="@+id/nextMusicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/playButton"/>


</RelativeLayout>